# otclient

./: .gitmodules  CMakeLists.txt
libraries/: CMakeLists.txt
libraries/test_lib/: test.cpp
src/: main.cpp
src/framework/util/: color.h
